[project]
name = "trml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "gymnasium>=1.0.0",
    "mss>=9.0.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "packaging>=24.1",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "pyinstrument>=5.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rtgym>=0.13",
    "tlspyo>=0.3.0",
    "torch>=2.5.1",
    "vgamepad>=0.1.0",
    "wandb>=0.18.5",
]

[project.scripts]
trml = "trml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "pip>=24.3.1",
]
